<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <fragment
        android:id="@+id/arFragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.pathfinder.ui.OverlayView
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintEnd_toEndOf="@+id/arFragment"
        app:layout_constraintStart_toStartOf="@+id/arFragment"
        app:layout_constraintTop_toTopOf="@+id/arFragment" />

    <TextView
        android:id="@+id/permissionDeniedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:padding="16dp"
        android:text="@string/camera_permission_is_required"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/arFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ttsStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#01567E"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tts_initializing"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/metricsFPSBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#01567E"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/metrics_fps_default"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/metricsLatencyBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#01567E"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/metrics_latency_default"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Footer Container -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#80000000"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Button 1: On/Off -->
        <ImageButton
            android:id="@+id/onOffButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/on_off_button_text"
            android:src="@android:drawable/ic_lock_power_off"
            app:tint="@android:color/white" />

        <!-- Button 2: Sound On/Off -->
        <ImageButton
            android:id="@+id/soundButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/sound_button_text"
            android:src="@android:drawable/ic_lock_silent_mode_off"
            app:tint="@android:color/white" />

        <!-- Button 3: Repeat Button -->
        <ImageButton
            android:id="@+id/repeatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/repeat_button_text"
            android:src="@android:drawable/ic_menu_revert"
            app:tint="@android:color/white" />

        <!-- Button 4: Metrics Button -->
        <ImageButton
            android:id="@+id/metricsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/metrics_button_text"
            android:src="@android:drawable/ic_menu_info_details"
            app:tint="@android:color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>